# FastAPI-Practice

./: .gitignore  crud.py  db.sqlite3  docker-compose.yaml  items.py  main.py  pyproject.toml
alembic/: env.py
api_v1/: __init__.py
api_v1/demo_auth/: demo_jwt_auth.py  helpers.py  user_related_helpers.py  validation.py  views.py
auth/: utils.py
core/: config.py
core/models/: __init__.py  db_helper.py  post.py  product.py  profile.py  user.py
fastapi-lesson2/: items.py  main.py
fastapi-lesson2/users/: views.py
fastapi-lesson3/: pyproject.toml
fastapi-lesson3/core/: config.py
fastapi-lesson3/core/models/: __init__.py
fastapi-lesson3/users/: crud.py  schemas.py
fastapi-lesson4/: crud.py  pyproject.toml  queries.sql
fastapi-lesson4/alembic/versions/: 2025_08_07_2000-0fe4f757de36_create_posts_table.py
fastapi-lesson4/api_v1/: __init__.py
fastapi-lesson4/api_v1/products/: __init__.py  crud.py  views.py
fastapi-lesson4/core/models/: profile.py
fastapi-lesson5/api_v1/demo_auth/: views.py
fastapi-lesson6/: .gitignore
fastapi-lesson6/api_v1/: __init__.py
fastapi-lesson6/users/: schemas.py
fastapi-lesson7/: pyproject.toml
fastapi-lesson7/src/: main.py
fastapi-lesson8/: .env_template  alembic.ini
fastapi-lesson8/migrations/: env.py
fastapi-lesson8/src/: create_fastapi_app.py
fastapi-lesson9/: .env_template  pyproject.toml
fastapi-lesson9/src/: create_fastapi_app.py
src/: main.py
src/api/api_v1/: users.py  (+1 more)
src/core/: config.py  lifespan.py
src/crud/: __init__.py  users.py
src/utils/: case_converter.py
users/: schemas.py
(+41 files in other folders)
