[project]
name = "lesson-6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.4",
    "bcrypt>=4.3.0",
    "black>=25.1.0",
    "fastapi>=0.116.1",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "pyjwt[crypto]>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.42",
    "uvicorn[standard]>=0.35.0",
]
